aci-helloworld/helloapp-depl.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-app
spec:
  replicas: 1  
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: aci-helloworld
        image: denniszielke/aci-helloworld    
        ports:
        - containerPort: 80
        imagePullPolicy: Always   
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "100m"
        livenessProbe:
            httpGet:
              path: /ping
              port: 80
        readinessProbe:
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
