aci-helloworld/helloapp-win.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 1  
  minReadySeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        image: microsoft/aci-helloworld:windows       
        ports:
        - containerPort: 80
        imagePullPolicy: Always
