aci-helloworld/helloapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 1  
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  selector:
    matchLabels:
      app: hello-app  
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        image: microsoft/aci-helloworld:latest       
        ports:
        - containerPort: 80
        imagePullPolicy: Always
