aci-helloworld/helloworld-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: helloworld
  labels:
    release: V76
    run: nginx
spec:
  containers:
    - name: aci-helloworld
      image: dzkubereg.azurecr.io/aci-helloworld-ci:76
      ports:
        - containerPort: 80
          name: http
          protocol: TCP
      resources:
        requests:
          memory: "128Mi"
          cpu: "500m"
        limits:
          memory: "256Mi"
          cpu: "1000m"
        livenessProbe:
            httpGet:
              path: /ping
              port: 3000
        readinessProbe:
          httpGet:
            path: /ping
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
