aci-helloworld/helloworld-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld-demo
    release: V76
  name: helloworld
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: helloworld-demo
    release: V76
  sessionAffinity: None
  type: LoadBalancer
