aci-helloworld/helloworld-win.yaml
apiVersion: v1
kind: Service
metadata:
  name: win-webserver
  labels:
      app: win-webserver
spec:
  ports:
      # the port that this service should serve on
  - port: 80
    targetPort: 80
  selector:
      app: win-webserver
  type: LoadBalancer
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
     labels:
         app: win-webserver
     name: win-webserver
 spec:
     replicas: 1
     template:
         metadata:
             labels:
                 app: win-webserver
             name: win-webserver
         spec:
             containers:
             - name: windowswebserver
               image: microsoft/windowsservercore:1709
               command:
               - powershell.exe
               - -command
               - "<#code used from https://gist.github.com/wagnerandrade/5424431#> ; $$listener = New-Object System.Net.HttpListener ; $$listener.Prefixes.Add('http://*:80/') ; $$listener.Start() ; $$callerCounts = @{} ; Write-Host('Listening at http://*:80/') ; while ($$listener.IsListening) { ;$$context = $$listener.GetContext() ;$$requestUrl = $$context.Request.Url ;$$clientIP = $$context.Request.RemoteEndPoint.Address ;$$response = $$context.Response ;Write-Host '' ;Write-Host('> {0}' -f $$r [...]
             nodeSelector:
                 beta.kubernetes.io/os: windows
