aci-helloworld/iis-win-1803.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iis-1803
  labels:
    app: iis-1803
spec:
  replicas: 1
  template:
    metadata:
      name: iis-1803
      labels:
        app: iis-1803
    spec:
      containers:
      - name: iis
        image: microsoft/iis:windowsservercore-1803
        ports:
          - containerPort: 80
      nodeSelector:
        "beta.kubernetes.io/os": windows
  selector:
    matchLabels:
      app: iis-1803
---
apiVersion: v1
kind: Service
metadata:
  name: iis
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: iis-1803
