aci-helloworld/helloingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver-ingress
  annotations:
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - echo.sbux.k8s.work
    secretName: echo-tls
  rules:
  - host: echo.sbux.k8s.work
    http:
      paths:
      - path: /echo
        backend:
          serviceName: echoserver
          servicePort: 8080
